# AbbCoLAB

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
docs/: Guia_CLI_AbbCoLAB.md  Guia_de_Curadoria.md  Sobre_AbbCoLAB.md
examples/: ocr_config.yaml
src/daa_cli/: backends.py  config.py  eval.py  export.py  main.py  ocr.py  utils.py
tests/: test_backends_cache.py  test_export.py  test_import.py  test_ocr_batch.py
