
[project]
name = "daa-ocr-cli"
version = "0.3.0"
description = "CLI colaborativa para OCR multi-engine e export para o AbbadiaT5"
authors = [{name="Do Arquivo ao Algoritmo Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "tqdm>=4.66.4",
    "jiwer>=3.0.3",
    "opencv-python>=4.8.0"
]

[project.optional-dependencies]
all-cpu = [
    "easyocr>=1.7",
    "paddleocr>=2.7",
    "paddlepaddle>=2.6; platform_system != 'Windows'",
]
ocr-easy = ["easyocr>=1.7"]
ocr-paddle = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6; platform_system != 'Windows'",
]

[project.scripts]
daa = "daa_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
